Name: propellor
Version: 5.13
Cabal-Version: 1.20
License: BSD2
Maintainer: Joey Hess <id@joeyh.name>
Author: Joey Hess
Stability: Stable
Copyright: 2014 Joey Hess
License-File: LICENSE
Build-Type: Simple
Homepage: https://propellor.branchable.com/
Category: Utility
Extra-Source-Files:
  README.md
  doc/README.mdwn
  CHANGELOG
  Makefile
  config-simple.hs
  config-freebsd.hs
  joeyconfig.hs
  config.hs
  contrib/post-merge-hook
  stack.yaml
  debian/changelog
  debian/propellor.README.Debian
  debian/compat
  debian/control
  debian/copyright
  debian/rules
  debian/lintian-overrides
Synopsis: property-based host configuration management in haskell
Description:
 Propellor ensures that the system it's run in satisfies a list of
 properties, taking action as necessary when a property is not yet met.
 .
 It is configured using haskell.

Flag WithTypeErrors
  Description: Build with type-errors library for better error messages and less memory use

Library
  Default-Language: Haskell2010
  GHC-Options: -Wall -fno-warn-tabs -O0
  Default-Extensions: TypeOperators
  Hs-Source-Dirs: src
  Build-Depends:
    -- propellor needs to support the ghc shipped in Debian stable,
    -- and also only depends on packages in Debian stable.
    base >= 4.9, base < 5,
    directory, filepath, IfElse, process, bytestring, hslogger, split,
    unix, unix-compat, ansi-terminal, containers (>= 0.5), network, async,
    time, mtl, transformers, exceptions (>= 0.6), stm, text, hashable
  if flag(WithTypeErrors)
    Build-Depends: type-errors
    CPP-Options: -DWITH_TYPE_ERRORS

  Exposed-Modules:
    Propellor.Property.SiteSpecific.JoeySites

    Propellor.Base
    Propellor.Bootstrap
    Propellor.Container
    Propellor.Debug
    Propellor.Engine
    Propellor.EnsureProperty
    Propellor.Exception
    Propellor.Git
    Propellor.Git.Config
    Propellor.Gpg
    Propellor.Info
    Propellor.Location
    Propellor.Message
    Propellor.PrivData
    Propellor.PrivData.Paths
    Propellor.PropAccum
    Propellor.Property
    Propellor.Property.Apache
    Propellor.Property.Apt
    Propellor.Property.Chroot
    Propellor.Property.Chroot.Util
    Propellor.Property.Cmd
    Propellor.Property.Cron
    Propellor.Property.Debootstrap
    Propellor.Property.File
    Propellor.Property.Git
    Propellor.Property.Group
    Propellor.Property.LetsEncrypt
    Propellor.Property.List
    Propellor.Property.Mount
    Propellor.Property.Qemu
    Propellor.Property.Service
    Propellor.Property.Ssh
    Propellor.Property.Systemd
    Propellor.Property.Systemd.Core
    Propellor.Property.User
    Propellor.Shim
    Propellor.Types
    Propellor.Types.Chroot
    Propellor.Types.CmdLine
    Propellor.Types.ConfigurableValue
    Propellor.Types.Container
    Propellor.Types.Core
    Propellor.Types.Dns
    Propellor.Types.Empty
    Propellor.Types.Exception
    Propellor.Types.Info
    Propellor.Types.MetaTypes
    Propellor.Types.OS
    Propellor.Types.PrivData
    Propellor.Types.Result
    Propellor.Types.ResultCheck
    Propellor.Types.Singletons
    Propellor.Types.ZFS
    Propellor.Utilities
    System.Console.Concurrent
    System.Console.Concurrent.Internal
    System.Process.Concurrent
    Utility.Applicative
    Utility.Data
    Utility.Directory
    Utility.Directory.Stream
    Utility.Directory.TestDirectory
    Utility.Env
    Utility.Env.Basic
    Utility.Env.Set
    Utility.Exception
    Utility.FileMode
    Utility.FileSystemEncoding
    Utility.LinuxMkLibs
    Utility.Misc
    Utility.Monad
    Utility.PartialPrelude
    Utility.Path
    Utility.Process
    Utility.Process.NonConcurrent
    Utility.Process.Shim
    Utility.Process.Transcript
    Utility.SafeCommand
    Utility.Split
    Utility.SystemDirectory
    Utility.Table
    Utility.Tmp
    Utility.Tmp.Dir
    Utility.UserInfo
